--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="settings_title">Settings</string>
+    <string name="settings_port_summary">The port for Moonraker API</string>
+    <string name="settings_port_title">Port</string>
+    <string name="settings_ip_summary">The IP for Moonraker API</string>
+    <string name="settings_ip_title">IP-Address</string>
 </resources>
