--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="channel_name">Print status</string>
     <string name="channel_description">Notification about current active print job</string>
     <string name="notification_title">3D printing in progress</string>
+    <string name="remove_notification">Close</string>
 </resources>
