Revert "Refactored string resource names to make them more clear."
This reverts commit 61226461

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,54 +18,43 @@
     <string name="settings_host_title">Host</string>
     <string name="prefs_test_string">Current moonraker location is %1$s:%2$s</string>
 
-    <string name="print_status_time_elapsed_label">Time since start:</string>
-    <string name="print_status_print_time_elapsed_label">Time spent printing:</string>
-    <string name="print_status_file_label">File:</string>
-    <string name="print_status_state_label">State:</string>
-    <string name="print_status_connected_to_message">Connected to %1$s</string>
-    <string name="print_status_message_label">Message:</string>
-    <string name="print_status_time_dash">-</string>
-    <string name="print_status_printing_message_placeholder">Some message</string>
-    <string name="print_status_long_file_name_placeholder">bigfile-with-some-very-long-filename-that-spans-multiple-rows.gcode</string>
-    <string name="print_status_printer_state_placeholder">Printing</string>
+    <string name="print_status_time_elapsed">Time since start:</string>
+    <string name="print_status_print_time_elapsed">Time spent printing:</string>
+    <string name="print_status_file">File:</string>
+    <string name="print_status_state">State:</string>
+    <string name="print_status_connected_to">Connected to %1$s</string>
+    <string name="print_status_message">Message:</string>
 
-    <string name="sd_card_file_modified_label">Modified:</string>
-    <string name="sd_card_file_size_label">Size:</string>
-    <string name="sd_card_estimated_time_label">Estimated time:</string>
-    <string name="sd_card_slicer_label">Slicer:</string>
-    <string name="sd_card_slicer_version_label">Slicer version:</string>
-    <string name="sd_card_modified_time_placeholder">000000</string>
-    <string name="sd_card_file_size_placeholder">0 MB</string>
-    <string name="sd_card_estimated_time_placeholder">0 hour</string>
-    <string name="sd_card_slicer_name_placeholder">slicer placeholder</string>
-    <string name="sd_card_slicer_version_placeholder">1.73</string>
-    <string name="sd_card_print_button_label">PRINT</string>
+    <string name="dash">-</string>
+    <string name="file_modified">Modified:</string>
+    <string name="file_size">Size:</string>
+    <string name="estimated_time">Estimated time:</string>
+    <string name="slicer">Slicer:</string>
+    <string name="slicer_version">Slicer version:</string>
+    <string name="modified_time_placeholder">000000</string>
+    <string name="file_size_placeholder">0 MB</string>
+    <string name="estimated_time_placeholder">0 hour</string>
+    <string name="slicer_name_placeholder">slicer placeholder</string>
+    <string name="slicer_version_placeholder">1.73</string>
+    <string name="print_file">PRINT</string>
+    <string name="negative_100">-100</string>
+    <string name="positive_100">+100</string>
+    <string name="negative_01">-0.1</string>
+    <string name="negative_1">-1</string>
+    <string name="negative_10">-10</string>
+    <string name="positive_10">+10</string>
+    <string name="positive_1">+1</string>
+    <string name="positive_01">+0.1</string>
+    <string name="default_temp">0.0C</string>
+    <string name="temp_target">Target:</string>
+    <string name="heated_plate">Heated\nPlate:</string>
+    <string name="hotend">Hotend:</string>
+    <string name="set_hotend_temp">Set Hotend Temp</string>
+    <string name="set_plate_temp">Set Plate Temp</string>
 
-    <string name="motors_negative_100">-100</string>
-    <string name="motors_positive_100">+100</string>
-    <string name="motors_negative_01">-0.1</string>
-    <string name="motors_negative_1">-1</string>
-    <string name="motors_negative_10">-10</string>
-    <string name="motors_positive_10">+10</string>
-    <string name="motors_positive_1">+1</string>
-    <string name="motors_positive_01">+0.1</string>
-    <string name="motors_default_zero_position_placeholder">0.00</string>
-    <string name="motors_z_axis_label">Z:</string>
-    <string name="motors_y_axis_label">Y:</string>
-    <string name="motors_x_axis_label">X:</string>
-    <string name="motors_e_label">E:</string>
-
-    <string name="temperatures_default_temp_placeholder">0.0C</string>
-    <string name="temperatures_target_temp_label">Target:</string>
-    <string name="temperatures_heated_plate_label">Heated\nPlate:</string>
-    <string name="temperatures_hotend_label">Hotend:</string>
-    <string name="temperatures_set_hotend_temp_button_label">Set Hotend Temp</string>
-    <string name="temperatures_set_plate_temp_button_label">Set Plate Temp</string>
-    <string name="temperatures_zero_temp_placeholder">0</string>
-
-    <string name="print_worker_channel_name">Print status</string>
-    <string name="print_worker_channel_description">Notification about current active print job</string>
-    <string name="print_worker_notification_title">3D printing in progress</string>
-    <string name="print_worker_remove_notification">Close</string>
-
+    <string name="channel_name">Print status</string>
+    <string name="channel_description">Notification about current active print job</string>
+    <string name="notification_title">3D printing in progress</string>
+    <string name="remove_notification">Close</string>
+    <string name="zero">0</string>
 </resources>
